          certain undocumented behaviour patterns such as not being able to
          remove a child watch source after it has fired, which we will try
          to emulate to avoid "criticals". what where they thinking...).
        - changed default dns resolver "max_outstanding" value from 1 to 10,
          the latter beinfg the intended value all along
          (reported by Ilya Chesnokov).

7.07 Tue Dec 17 17:45:02 CET 2013
	- the documentation for custom tls verify schemes was wrong. make it agree
          with the code (reported by Maxime Soulé).
	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
        - work around an API change in openssl that could cause wrong tls connection
          aborts, likely on windows only (analyzed by sten).
        - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
          endless loop (reported by Dietrich Rebmann).
        - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
          (patch by Maxime Soulé).
        - document AnyEvent::Impl::IOAsync::set_loop and
          $AnyEvent::Impl::IOAsync::LOOP. Though only documented now, this
          functionality has _always_ been available.
	- force a toplevel domain name in t/81_hosts.t (analyzed by
          David Jack Wange Olrik).
        - document that AnyEvent::Log uses AnyEvent::IO.
        - warn about AnyEvent::Filesys::Notify performance.
        - praise the joys of AnyEvent::Fork::*.
        - time for an =encoding directive.
        - do no longer use JSON to create a default json coder, use
          JSON::XS or JSON::PP directly.

7.05 Wed Aug 21 10:38:08 CEST 2013
	- uts46data.pl couldn't be found due to wrong naming of the file
          (reported by Fulko Hew).
        - handle lone \015's properly in AE::Handle's default line read
          (reported by various people).
        - untaint ip addresses found in /etc/hosts (patch by José Micó).