@@ -30,6 +30,8 @@ TODO: Mike Lowell AnyEvent + libuv
         - changed default dns resolver "max_outstanding" value from 1 to 10,
           the latter beinfg the intended value all along
           (reported by Ilya Chesnokov).
+        - added new "AnyEvent::Impl::UV" interface module to the UV event lib
+          (written by Mike Lowell).
 
 7.07 Tue Dec 17 17:45:02 CET 2013
 	- the documentation for custom tls verify schemes was wrong. make it agree
